[gd_scene load_steps=4 format=3 uid="uid://dhdg6q74c25xs"]

[ext_resource type="Script" uid="uid://0gowixdidx7r" path="res://ui/menu/end_menu.gd" id="1_3i88t"]
[ext_resource type="Texture2D" uid="uid://dl6kuj1xhnmaw" path="res://assets/ui/menu_background.png" id="2_elxwa"]
[ext_resource type="Texture2D" uid="uid://cih8d4frvfi2o" path="res://assets/ui/MENU_final.png" id="3_fofyh"]

[node name="EndMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3i88t")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_elxwa")

[node name="MenuBtn" type="TextureButton" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -171.0
offset_right = 128.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_fofyh")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -593.5
offset_top = -366.0
offset_right = 593.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 282
text = "THE END"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -32.0
offset_right = 568.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 124
text = "Thanks for playing!"

[connection signal="pressed" from="Panel/MenuBtn" to="." method="_on_menu_btn_pressed"]
